# IC-Astronomy-Capture

./: .gitignore  CMakeLists.txt  README.md  vcpkg.json
common/: setup_qt.cmake
fits/: fitssaver.cpp  fitssaver.h
include/: mainwindow.h  optionsdialog.h  version.h  videowidget.h
lib/cfitsio/: cfitsio.lib
resources/: resources.qrc
src/: main.cpp  mainwindow.cpp  optionsdialog.cpp  videowidget.cpp
translations/: ic_astronomy_de.ts  ic_astronomy_en.ts
